--- a/public/css/common.css
+++ b/public/css/common.css
@@ -1,6 +1,98 @@
-.button{
-
+body {
+  font-family:"Microsoft YaHei",微软雅黑,"MicrosoftJhengHei",华文细黑,STHeiti,MingLiu,sans-serif;
+  background-color: rgba(243,243,251,0.3);
+  min-width: 1366px;
 }
-.w200{
+a {
+  color: #000;
+  text-decoration: none;
+}
+ul {
+  padding: 0;
+  margin: 0;
+}
+input {
+  outline: none;
+}
+.w200 {
    width: 200px;
 }
+footer {
+  width: 100%;
+  height: 48px;
+  line-height: 48px;
+  text-align: center;
+  color: #fff;
+  background-color: #908f8f;
+  margin-top: 20px;
+}
+/****** 导航栏菜单------start ******/
+.partition {
+  margin-top: 5px;
+}
+.partition ul {
+  padding: 0;
+  margin: 2px 0;
+}
+.partition li {
+  width: 170px;
+  border: 1px solid white;
+  text-align: center;
+  background-color: #79acd6;
+  list-style: none;
+  float: left;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  padding: 2px 0;
+  margin: 2px 0;
+  cursor: pointer;
+}
+.partition li:hover {
+  background-color: #fff;
+  border: 1px solid #79acd6;
+  color:#79acd6;
+}
+.partition li:hover a {
+  color: #79acd6;
+}
+.partition a {
+  display: inline-block;
+  text-decoration: none;
+  padding: 5px;
+  font-weight: bold;
+  font-size: 18px;
+  color: #fff;
+}
+/****** 导航栏菜单------end ******/
+
+/****** 输入框样式------start ******/
+input {
+  width: 200px;
+  height: 25px;
+  padding-left: 10px;
+}
+/****** 输入框样式------end ******/
+
+/****** 按钮样式------start ******/
+.btn {
+  display: inline-block;
+  font-size: 18px;
+  color: #fff;
+  border-radius: 2px;
+  padding: 6px;
+  background-color: #a5a6a7;
+  cursor: pointer;
+}
+.btn.blue {
+  background-color: #427af7;
+}
+/****** 按钮样式------end ******/
+
+/****** label标签样式------start ******/
+label {
+  display: inline-block;
+  padding-right: 20px;
+  text-align: right;
+}
+/****** label标签样式------end ******/
