--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,10 +1,17 @@
-form{
+form {
   width:500px;
   height:500px;
   margin:20% auto;
 }
-input.submit{
+input.submit {
   width:90px;
   text-align:center;
   margin-left:70px;
+}
+
+form p {
+  text-align: center;
+}
+p .btn {
+  margin-left: 15px;
 }
